--- a/ClientApp/.eslintrc.json
+++ b/ClientApp/.eslintrc.json
@@ -1,56 +1,51 @@
 {
+  "root": true,
+  "env": {
+    "es6": true
+  },
   "settings": {
     "react": {
       "version": "detect"
     }
   },
-  "env": {
-    "browser": true,
-    "es2021": true
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "sourceType": "module",
+    "project": [
+      "./tsconfig.json"
+    ]
   },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-  "overrides": [
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
   "plugins": [
     "react",
+    "react-hooks",
     "@typescript-eslint",
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": [
+    "prettier/prettier": "error",
+    "comma-dangle": [
       "error",
       {
-        "endOfLine": "auto"
+        "arrays": "never",
+        "objects": "always",
+        "imports": "never",
+        "exports": "never",
+        "functions": "never"
       }
     ],
-    "indent": [
+    "jsx-quotes": [
       "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "no-unreachable": "error",
-    "no-unused-vars": "error",
-    "newline-before-return": "error"
+      "prefer-double"
+    ]
   }
 }
