- Update rules for eslint.

--- a/ClientApp/.eslintrc.json
+++ b/ClientApp/.eslintrc.json
@@ -46,6 +46,31 @@
     "jsx-quotes": [
       "error",
       "prefer-double"
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 80,
+        "ignoreUrls": true
+      }
+    ],
+    "padding-line-between-statements": [
+      "error",
+      {
+        "blankLine": "always",
+        "prev": "*",
+        "next": "return"
+      }
+    ],
+    "no-magic-numbers": [
+      "error",
+      {
+        "ignoreArrayIndexes": true,
+        "ignore": [
+          0,
+          1
+        ]
+      }
     ]
   }
 }
