--- a/ClientApp/.prettierrc
+++ b/ClientApp/.prettierrc
@@ -8,5 +8,6 @@
   "jsxSingleQuote": false,
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "trailingComma": "es5"
 }
