--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -35,6 +35,7 @@
     "prettier": "^2.8.7",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
@@ -42,6 +43,7 @@
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
+    "antd": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
