--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
