- Create layout structure with 2 split panels for side menu and main content; - Create components for layout: header, footer, side menu; - Add User toolbar component with user settings; - Create popover component for user notifications; - Create layout in app component.

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -46,6 +46,7 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-resizable-panels": "^0.0.41"
   }
 }
