--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -10,7 +10,8 @@
     "clean": "rd /s /q dist",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
     "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
-    "prettier": "prettier --config .prettierrc --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\""
+    "prettier": "prettier --config .prettierrc --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "lint:scss": "stylelint \"src/**/*.{css,scss}\" --config ./codeStyleConfigs/.stylelint-config"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +37,10 @@
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
+    "stylelint": "^15.6.0",
+    "stylelint-config-recommended-scss": "^10.0.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^8.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
