--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -54,6 +54,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
-    "react-resizable-panels": "^0.0.41"
+    "react-resizable-panels": "^0.0.41",
+    "react-router-dom": "^6.10.0"
   }
 }
