- Add line width rule for .editorconfig; - Add config section for notes storage.

--- a/GlobalHub/NotesService/appsettings.Development.json
+++ b/GlobalHub/NotesService/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "NotesStorage": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "NotesStore",
+    "NotesCollectionName": "Notes"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
