--- a/GlobalHub/.editorconfig
+++ b/GlobalHub/.editorconfig
@@ -5,6 +5,7 @@ root = true
 # All files
 [*]
 indent_style = space
+max_line_length = 120
 
 # XML project files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
