- Add notes dbContext that works with MongoDb; - Add notes repository that manages notes; - Add create and read operations to notes controller; - Update Note module.

--- a/GlobalHub/NotesService/NotesService.csproj
+++ b/GlobalHub/NotesService/NotesService.csproj
@@ -8,12 +8,16 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
+        <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\stylecop.json">
         <Link>stylecop.json</Link>
+      </Content>
+      <Content Update="appsettings.Development.json">
+        <DependentUpon>appsettings.json</DependentUpon>
       </Content>
     </ItemGroup>
 
