--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Backend App CI
 
 on:
   push:
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Navigate to backend directory
-      run:  pwd
-            ls
+      run:  pwd &&
+            ls &&
             cd GlobalHub
     - name: Restore dependencies
       run: dotnet restore
