--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,9 +21,7 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Navigate to backend directory
-      run:  pwd &&
-            ls &&
-            cd GlobalHub
+      run:  cd GlobalHub && ls
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
