--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,14 +14,17 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: GlobalHub/
+
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    - name: Navigate to backend directory
-      run:  cd GlobalHub
+    - run: pwd
     - name: Restore dependencies
       run: pwd && ls && dotnet restore
     - name: Build
