- Add editor.js dependency as rich text editor; - Add config with plugins for editor.js; - Update formatting for pages components; - Update linter's rules and webpack config for dev environment;

--- a/ClientApp/.eslintrc.json
+++ b/ClientApp/.eslintrc.json
@@ -32,7 +32,12 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "comma-dangle": [
       "error",
       {
