--- a/ClientApp/.stylelintrc.json
+++ b/ClientApp/.stylelintrc.json
@@ -34,7 +34,8 @@
       true,
       {
         "ignore": [
-          "class"
+          "class",
+          "attribute"
         ]
       }
     ],
