--- a/ClientApp/.prettierrc
+++ b/ClientApp/.prettierrc
@@ -3,6 +3,7 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
+  "printWidth": 120,
   "quoteProps": "as-needed",
   "jsxSingleQuote": false,
   "bracketSpacing": true,
