--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -30,7 +30,6 @@
     "codex.editor.code": "^2.3.1",
     "codex.editor.delimiter": "^1.0.2",
     "codex.editor.inline-code": "^1.2.0",
-    "codex.editor.quote": "^2.1.5",
     "css-loader": "^6.7.3",
     "editorjs-alert": "^1.1.3",
     "editorjs-hyperlink": "^1.0.6",
@@ -65,6 +64,7 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.2",
     "axios": "^1.4.0",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
     "i18next": "^22.4.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
