--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,12 +17,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/nested-list": "^1.3.0",
+    "@editorjs/table": "^2.2.1",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "codex.editor.code": "^2.3.1",
+    "codex.editor.delimiter": "^1.0.2",
+    "codex.editor.inline-code": "^1.2.0",
     "css-loader": "^6.7.3",
+    "editorjs-alert": "^1.1.3",
+    "editorjs-hyperlink": "^1.0.6",
+    "editorjs-paragraph-with-alignment": "^3.0.0",
+    "editorjs-text-color-plugin": "^2.0.2",
+    "editorjs-undo": "^2.0.21",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -50,6 +63,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.2",
+    "axios": "^1.4.0",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
     "i18next": "^22.4.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
