--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@editorjs/header": "^2.7.0",
     "@editorjs/nested-list": "^1.3.0",
     "@editorjs/table": "^2.2.1",
+    "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
@@ -66,10 +67,13 @@
     "axios": "^1.4.0",
     "editorjs-text-alignment-blocktune": "^1.0.3",
     "i18next": "^22.4.15",
+    "javascript-time-ago": "^2.5.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
     "react-resizable-panels": "^0.0.41",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-time-ago": "^7.2.1"
   }
 }
