--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -5,6 +5,7 @@
   "main": "index.tsx",
   "scripts": {
     "start": "webpack serve",
+    "serve": "serve -s dist",
     "build": "webpack",
     "build-prod": "webpack --mode=production",
     "clean": "rd /s /q dist",
@@ -18,7 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@editorjs/checklist": "^1.5.0",
-    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/editorjs": "^2.27.0",
     "@editorjs/header": "^2.7.0",
     "@editorjs/nested-list": "^1.3.0",
     "@editorjs/table": "^2.2.1",
