--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -70,6 +70,8 @@
     "i18next": "^22.4.15",
     "javascript-time-ago": "^2.5.9",
     "lodash": "^4.17.21",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
