- Replace callback based handling by async/await; - Allow using decorators for mobx, update tsconfig.json.

--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -19,7 +19,8 @@
     "isolatedModules": true,
     "noEmitOnError": true,
     "jsx": "react-jsx",
-    "sourceMap": true
+    "sourceMap": true,
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules"
