--- a/GlobalHub/NotesService/appsettings.Development.json
+++ b/GlobalHub/NotesService/appsettings.Development.json
@@ -4,6 +4,7 @@
     "DatabaseName": "NotesStore",
     "NotesCollectionName": "Notes"
   },
+  "LogStorageUri": "http://localhost:9200",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
