- Update packages; - Update monitor docker compose name; - Remove hover effect from resize handler; - Change panels sizes; - Update AppContent bg color.

--- a/GlobalHub/DockerCompose-Monitoring.yml
+++ b/GlobalHub/DockerCompose-Monitoring.yml
@@ -1,5 +1,5 @@
 version: "3.9"
-name: 'Global Hub - Monitoring&Health'
+name: 'global_hub_monitoring'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.8.0
