--- a/GlobalHub/BudgetBusiness/BudgetBusiness.csproj
+++ b/GlobalHub/BudgetBusiness/BudgetBusiness.csproj
@@ -8,11 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="MappingProfiles\" />
-      <Folder Include="Services\" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="FluentValidation" Version="11.6.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.6.0" />
     </ItemGroup>
