--- a/GlobalHub/Common/Common.csproj
+++ b/GlobalHub/Common/Common.csproj
@@ -17,7 +17,8 @@
 
     <ItemGroup>
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
-      <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0-dev-00793" />
+      <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
+      <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
       <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="9.0.3" />
     </ItemGroup>
 
