- Update ci workflows.

--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: |
         cd ClientApp
-        npm install
+        npm ci
         npx webpack
         npm run lint
         npm run lint:scss
