--- a/GlobalHub/BudgetService/BudgetServiceWeb/BudgetServiceWeb.csproj
+++ b/GlobalHub/BudgetService/BudgetServiceWeb/BudgetServiceWeb.csproj
@@ -28,7 +28,7 @@
     <ItemGroup>
       <ProjectReference Include="..\BudgetBusiness\BudgetBusiness.csproj" />
       <ProjectReference Include="..\BudgetDataAccess\BudgetDataAccess.csproj" />
-      <ProjectReference Include="..\Common\Common.csproj" />
+      <ProjectReference Include="..\..\Common\Common.csproj" />
     </ItemGroup>
 
 </Project>
