--- a/GlobalHub/BudgetService/BudgetsService.Infrastructure/BudgetsService.Infrastructure.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.Infrastructure/BudgetsService.Infrastructure.csproj
@@ -7,4 +7,8 @@
         <RootNamespace>BudgetsService.Infrastructure</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+    </ItemGroup>
+
 </Project>
