- Make color field in tag models enum; - Add enum helper to iterate over the enum values; - Add extension method for applying migration from sql file.

--- a/GlobalHub/BudgetService/BudgetsService.DataAccess/BudgetsService.DataAccess.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.DataAccess/BudgetsService.DataAccess.csproj
@@ -20,4 +20,10 @@
       <ProjectReference Include="..\BudgetsService.Infrastructure\BudgetsService.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Migrations\20230907193621_ChangeTagColorColumnTypeToInteger.sql">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
