- Update notes service to receive secrets from environment variables.

--- a/GlobalHub/NotesService/NotesService.csproj
+++ b/GlobalHub/NotesService/NotesService.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DotNetEnv" Version="2.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
         <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
@@ -17,9 +18,6 @@
     <ItemGroup>
       <Content Include="..\stylecop.json">
         <Link>stylecop.json</Link>
-      </Content>
-      <Content Update="appsettings.Development.json">
-        <DependentUpon>appsettings.json</DependentUpon>
       </Content>
     </ItemGroup>
 
