- Update budget service to get secrets from environment variables.

--- a/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="DotNetEnv" Version="2.5.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.6.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
@@ -17,12 +18,6 @@
         </PackageReference>
         <PackageReference Include="Microsoft.OpenApi" Version="1.4.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Update="appsettings.Development.json">
-        <DependentUpon>appsettings.json</DependentUpon>
-      </Content>
     </ItemGroup>
 
     <ItemGroup>
