- Update dependencies between project to get rid of relation between Common.csproj and BudgetsService.Infrastructure.csproj; - Create Dockerfiles for All services in the system; - Update startup config of all services to handle containerization correctly; - Update ClientApp to use runtime environment variables to avoid of extra image rebuilds when managing several environments.

--- a/ClientApp/.env
+++ b/ClientApp/.env
@@ -1,4 +1,2 @@
-# THE FILE CONTAINS VARIABLES ONLY FOR LOCAL ENVIRONMENT
-
-NOTES_SERVICE_BASE_ENV='http://localhost:5143/api/v1'
-BUDGETS_SERVICE_BASE_ENV='http://localhost:5118/api/v1'
+NOTES_SERVICE_BASE=http://localhost:5143/api/v1
+BUDGETS_SERVICE_BASE=http://localhost:5118/api/v1
