--- a/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
@@ -27,4 +27,10 @@
       <ProjectReference Include="..\BudgetsService.Infrastructure\BudgetsService.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
 </Project>
