--- a/ClientApp/.dockerignore
+++ b/ClientApp/.dockerignore
@@ -1,6 +1,5 @@
-﻿**/.classpath
+**/.classpath
 **/.dockerignore
-**/.env
 **/.git
 **/.gitignore
 **/.project
@@ -24,3 +23,4 @@
 **/values.dev.yaml
 LICENSE
 README.md
+**/dist
