--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -81,6 +81,7 @@
     "react-i18next": "^13.2.2",
     "react-resizable-panels": "^0.0.55",
     "react-router-dom": "^6.15.0",
-    "react-time-ago": "^7.2.1"
+    "react-time-ago": "^7.2.1",
+    "runtime-env-cra": "^0.2.4"
   }
 }
