--- a/GlobalHub/BudgetService/BudgetsService.Business/BudgetsService.Business.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.Business/BudgetsService.Business.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\Common.csproj" />
       <ProjectReference Include="..\BudgetsService.DataAccess\BudgetsService.DataAccess.csproj" />
       <ProjectReference Include="..\BudgetsService.Infrastructure\BudgetsService.Infrastructure.csproj" />
     </ItemGroup>
