--- a/GlobalHub/BudgetService/BudgetsService.Infrastructure/BudgetsService.Infrastructure.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.Infrastructure/BudgetsService.Infrastructure.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Exceptions\" />
+    </ItemGroup>
+
 </Project>
