- Fix 404 on client app reload deployed under nginx; - Add automigration db in budget service for DOCKER_COMPOSE_DEMO environment; - Update urls in docker compose.

--- a/GlobalHub/docker-compose.yml
+++ b/GlobalHub/docker-compose.yml
@@ -25,7 +25,9 @@ services:
     ports:
       - "5118:80"
     environment:
+      - "ASPNETCORE_ENVIRONMENT=DOCKER_COMPOSE_DEMO"
       - "BUDGETS_SERVICE_STORAGE_CONNECTION_STRING=User ID=postgres;Password=Qwerty12345;Host=budgets-db;Port=5432;Database=BudgetStorage"
+      - "LOG_STORAGE=localhost:9200"
     depends_on:
       - budgets-db
 
@@ -37,7 +39,9 @@ services:
     ports:
       - "5143:80"
     environment:
+      - "ASPNETCORE_ENVIRONMENT=DOCKER_COMPOSE_DEMO"
       - "NOTES_SERIVCE_STORAGE_CONNECTION_STRING=mongodb://notes-db:27017"
+      - "LOG_STORAGE=localhost:9200"
     depends_on:
       - notes-db
     
@@ -46,8 +50,8 @@ services:
       context: ../ClientApp
       dockerfile: ../ClientApp/Dockerfile
     environment:
-      - "NOTES_SERVICE_BASE=http://budgets-service:5143/api/v1"
-      - "BUDGETS_SERVICE_BASE=http://notes-service:5118/api/v1"
+      - "NOTES_SERVICE_BASE=http://localhost:5143/api/v1"
+      - "BUDGETS_SERVICE_BASE=http://localhost:5118/api/v1"
     ports:
       - "8080:80"
     depends_on:
