--- a/ClientApp/nginx.conf
+++ b/ClientApp/nginx.conf
@@ -1,11 +1,10 @@
 server {
   listen 80;
-  server_name localhost;
 
   location / {
-    root /usr/share/nginx/html/;
+    root /usr/share/nginx/html;
     index index.html;
     include /etc/nginx/mime.types;
-    try_files $uri $uri/ index.html;
+    try_files $uri $uri/ /index.html?$query_string;
   }
 }
