-Replace .net docker images by alpine images to reduce result image size; - Minor updates in docker compose file.

--- a/GlobalHub/BudgetService/BudgetsService.Web/Dockerfile
+++ b/GlobalHub/BudgetService/BudgetsService.Web/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+﻿FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
 WORKDIR /app
 
 COPY BudgetService/ ./BudgetService
@@ -8,7 +8,7 @@ RUN dotnet build -c Release BudgetService/BudgetService.sln
 FROM build as publish
 RUN dotnet publish -c Release BudgetService/BudgetService.sln -o publish --no-restore --no-build
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS final
 WORKDIR /app
 COPY --from=publish /app/publish ./
 
