--- a/GlobalHub/NotesService/Dockerfile
+++ b/GlobalHub/NotesService/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+﻿FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
 WORKDIR /app
 
 COPY NotesService/ ./NotesService
@@ -8,7 +8,7 @@ RUN dotnet build -c Release NotesService/NotesService.csproj
 FROM build as publish
 RUN dotnet publish -c Release NotesService/NotesService.csproj -o publish --no-restore --no-build
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS final
 WORKDIR /app
 COPY --from=publish /app/publish ./
 
