- Update dockerfile for build agent and eslint config.

--- a/GlobalHub/Infrastructure/BuildAgent/Dockerfile
+++ b/GlobalHub/Infrastructure/BuildAgent/Dockerfile
@@ -3,12 +3,13 @@
 USER root
 
 RUN ["/bin/bash", "-c", "apt-get update \
-                         && apt-get install -y wget \
-                         && wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
-                         && dpkg -i packages-microsoft-prod.deb \
-                         && apt-get update \
-                         && apt-get install -y apt-transport-https \
-                         && apt-get update \
-                         && apt-get install -y dotnet-sdk-7.0"]
+    && apt-get install -y wget \
+    && wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
+    && dpkg -i packages-microsoft-prod.deb \
+    && apt-get update \
+    && apt-get install -y apt-transport-https \
+    && apt-get update \
+    && apt-get install -y dotnet-sdk-7.0 \
+    && dotnet tool install GitVersion.Tool --version 5.* --tool-path /bin"]
 
 USER buildagent
