--- a/ClientApp/.eslintrc.json
+++ b/ClientApp/.eslintrc.json
@@ -13,10 +13,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "sourceType": "module",
-    "project": [
-      "./tsconfig.json"
-    ]
+    "sourceType": "module"
   },
   "extends": [
     "eslint:recommended",
