--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -29,16 +29,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
-    "codex.editor.code": "^2.3.1",
-    "codex.editor.delimiter": "^1.0.2",
-    "codex.editor.inline-code": "^1.2.0",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
-    "editorjs-alert": "^1.1.3",
-    "editorjs-hyperlink": "^1.0.6",
-    "editorjs-paragraph-with-alignment": "^3.0.0",
-    "editorjs-text-color-plugin": "^2.0.4",
-    "editorjs-undo": "^2.0.26",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -67,9 +59,28 @@
     "@ant-design/graphs": "^1.4.0",
     "@ant-design/icons": "^5.2.6",
     "@ant-design/plots": "^1.2.5",
+    "@calumk/editorjs-columns": "^0.3.1",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/embed": "^2.6.0",
+    "@editorjs/image": "^2.8.2",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.11.3",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/warning": "^1.3.0",
+    "@rxpm/editor-js-code": "^0.0.1",
     "antd": "^5.10.2",
     "axios": "^1.6.0",
+    "codex.editor.code": "^2.3.1",
+    "codex.editor.delimiter": "^1.0.2",
+    "codex.editor.inline-code": "^1.2.0",
+    "editorjs-alert": "^1.1.3",
+    "editorjs-hyperlink": "^1.0.6",
+    "editorjs-paragraph-with-alignment": "^3.0.0",
     "editorjs-text-alignment-blocktune": "^1.0.3",
+    "editorjs-text-color-plugin": "^2.0.4",
+    "editorjs-toggle-block": "^0.3.14",
     "i18next": "^23.6.0",
     "javascript-time-ago": "^2.5.9",
     "lodash": "^4.17.21",
