--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.29",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "css-loader": "^6.8.1",
@@ -93,7 +94,6 @@
     "react-resizable-panels": "^0.0.55",
     "react-router-dom": "^6.17.0",
     "react-time-ago": "^7.2.1",
-    "runtime-env-cra": "^0.2.4",
-    "styled-components": "^6.1.0"
+    "runtime-env-cra": "^0.2.4"
   }
 }
