--- a/ClientApp/nginx.conf
+++ b/ClientApp/nginx.conf
@@ -1,5 +1,23 @@
 server {
-  listen 80;
+  server_name  global-hub.xyz www.global-hub.xyz;
+
+  listen 80 default_server;
+  listen [::]:80 default_server;
+
+  if ($scheme != "https") {
+      return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  server_name  global-hub.xyz www.global-hub.xyz;
+
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+
+  ssl on;
+  ssl_certificate /etc/letsencrypt/live/global-hub.xyz/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/global-hub.xyz/privkey.pem;
 
   location / {
     root /usr/share/nginx/html;
