--- a/ClientApp/nginx.conf
+++ b/ClientApp/nginx.conf
@@ -12,10 +12,9 @@ server {
 server {
   server_name  global-hub.xyz www.global-hub.xyz;
 
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
+  listen 443 ssl;
+  listen [::]:443 ssl;
 
-  ssl on;
   ssl_certificate /etc/letsencrypt/live/global-hub.xyz/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/global-hub.xyz/privkey.pem;
 
