Add kestrel config to use ssl certificate from provided docker volume in production environment.

--- a/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
@@ -31,6 +31,9 @@
       <Content Include="..\..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <Content Update="appsettings.production.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
     </ItemGroup>
 
 </Project>
