Update case for env specific config

--- a/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
+++ b/GlobalHub/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
@@ -31,7 +31,7 @@
       <Content Include="..\..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
-      <Content Update="appsettings.production.json">
+      <Content Update="appsettings.Production.json">
         <DependentUpon>appsettings.json</DependentUpon>
       </Content>
     </ItemGroup>
