- Add color-scheme updating in dependence on theme.

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -96,5 +96,17 @@
     "react-router-dom": "^6.18.0",
     "react-time-ago": "^7.2.1",
     "runtime-env-cra": "^0.2.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
