--- a/GlobalHub/BudgetService/BudgetsService.Web/Properties/launchSettings.json
+++ b/GlobalHub/BudgetService/BudgetsService.Web/Properties/launchSettings.json
@@ -22,7 +22,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7285;http://localhost:5118",
       "environmentVariables": {
