--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -19,7 +19,6 @@
   "license": "ISC",
   "devDependencies": {
     "@editorjs/checklist": "^1.5.0",
-    "@editorjs/editorjs": "^2.28.2",
     "@editorjs/header": "^2.7.0",
     "@editorjs/nested-list": "^1.3.0",
     "@editorjs/table": "^2.2.2",
@@ -72,6 +71,7 @@
     "@editorjs/simple-image": "^1.5.1",
     "@editorjs/warning": "^1.3.0",
     "@rxpm/editor-js-code": "^0.0.1",
+    "@stfy/react-editor.js": "^1.0.3",
     "antd": "^5.11.0",
     "axios": "^1.6.0",
     "codex.editor.code": "^2.3.1",
