- Add link from login page to registration page; - Implement Profile service to map Identity Claims to token; - Fix namespaces in Identity Service; - Update Identity Server seeding config.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Common.csproj"/>
     <ProjectReference Include="..\IdentityService.Domain\IdentityService.Domain.csproj"/>
+    <ProjectReference Include="..\IdentityService.Infrastructure\IdentityService.Infrastructure.csproj" />
     <ProjectReference Include="..\IdentityService.Persistence\IdentityService.Persistence.csproj"/>
   </ItemGroup>
 
