- Add OIDC client + config to CLient App; - Update settings up axios request interceptor to inject auth header.

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -88,10 +88,12 @@
     "lodash": "^4.17.21",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
+    "oidc-client-ts": "^3.0.0-beta.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
+    "react-oidc-context": "^3.0.0-beta.0",
     "react-resizable-panels": "^0.0.59",
     "react-router-dom": "^6.19.0",
     "react-time-ago": "^7.2.1",
