- Add authentication to Functional services; - Update interceptor to inject access token to each request.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "AllowedHosts": "*",
+  //  Override necessary values from env variables
   "IdentityServer": {
     "IssuerUri": "https://localhost:7389",
     "IdentityResources": [
