--- a/GlobalHub/Services/NotesService/NotesService.csproj
+++ b/GlobalHub/Services/NotesService/NotesService.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="2.5.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13"/>
     <PackageReference Include="MongoDB.Driver" Version="2.22.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
@@ -21,6 +22,9 @@
     </Content>
     <Content Include="..\..\stylecop.json">
       <Link>stylecop.json</Link>
+    </Content>
+    <Content Update="appsettings.Production.json">
+      <DependentUpon>appsettings.json</DependentUpon>
     </Content>
   </ItemGroup>
 
