- Update cert paths for all services.

--- a/ClientApp/nginx.conf
+++ b/ClientApp/nginx.conf
@@ -15,8 +15,8 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
 
-  ssl_certificate /etc/letsencrypt/live/global-hub.xyz/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/global-hub.xyz/privkey.pem;
+  ssl_certificate /etc/https/fullchain.pem;
+  ssl_certificate_key /etc/https/privkey.pem;
 
   location / {
     root /usr/share/nginx/html;
