--- a/GlobalHub/Services/NotesService/appsettings.Production.json
+++ b/GlobalHub/Services/NotesService/appsettings.Production.json
@@ -7,8 +7,8 @@
       "HttpsFromPem": {
         "Url": "https://0.0.0.0:443",
         "Certificate": {
-          "Path": "/etc/letsencrypt/live/global-hub.xyz/cert.pem",
-          "KeyPath": "/etc/letsencrypt/live/global-hub.xyz/privkey.pem"
+          "Path": "/etc/https/cert.pem",
+          "KeyPath": "/etc/https/privkey.pem"
         }
       }
     }
