- Configure services to use Identity Authority uri from env variables with fallback in .env file.

--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -1,6 +1,7 @@
 # THE FILE CONTAINS VARIABLES ONLY FOR LOCAL ENVIRONMENT
 
 #Common constants shared across several services
+IDENTITY_SERVICE_URL='https://localhost:7389'
 LOG_STORAGE='http://localhost:9200'
 
 #Notes Service constants
