--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
@@ -38,7 +38,7 @@
     <Content Include="..\..\..\stylecop.json">
       <Link>stylecop.json</Link>
     </Content>
-    <Content Update="appsettings.Production.json">
+    <Content Update="appsettings.Staging.json">
       <DependentUpon>appsettings.json</DependentUpon>
     </Content>
   </ItemGroup>
