--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Dockerfile
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Dockerfile
@@ -1,5 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS base
 WORKDIR /app
+RUN apk add --no-cache icu-libs
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 EXPOSE 80
 EXPOSE 443
 
